[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpace"
version = "0.0.1"
dependencies = [
  "fastapi[standard]",
  "pydantic-settings"
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["fastpace*"]
exclude = ["fastpace.tests*"]
namespaces = false

[project.scripts]
fastpace = "fastpace.__main__:start"
